--- a/app/views/common/_latest_post.html.erb
+++ b/app/views/common/_latest_post.html.erb
@@ -15,7 +15,7 @@
           <div class="media-body">
             <h4 class="media-heading"><%= link_to post.title, post %></h4>
             <p>
-              <%= markdown(post.body).truncate(40, :omission => "......").html_safe %>
+              <%= markdown(post.body).truncate(40, :omission => "......") %>
             </p>
           </div>
         </div>
