--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,11 +24,12 @@
     </div>
     <div class="post-content">
       <p>
-        <%= markdown(post.body).truncate(800, :omission => "......").html_safe %>
-        <%= link_to 'Read More', post, class: "btn btn-primary" %>
+        <%= markdown(post.body).truncate(800, :omission => "......") %><br/>
+        <%= link_to 'Read More', post, class: 'btn btn-primary' %>
       </p>
     </div>
   </article>
+
 <% end %>
 <div class="pagination pagination-centered">
   <%= will_paginate @posts, :class => "flickr_pagination" %>
