Add social link

--- a/app/views/about_us/aboutus.html.erb
+++ b/app/views/about_us/aboutus.html.erb
@@ -2,7 +2,7 @@
 <div class="row-fluid portfolio portfolio-extended member-info">
     <article class="span3">
         <div class="inner-image">
-            <%= image_tag("bruce.png", width: 255) %>
+            <%= image_tag("bruce.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
