--- a/app/views/common/_social.html.erb
+++ b/app/views/common/_social.html.erb
@@ -7,11 +7,11 @@
       <div class="span8">
         <ul class="top-social hidden-phone">
           <%= render "common/login_form" %>
-          <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Facebook"><i class="icon-facebook"></i></a></li>
-          <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Twitter"><i class="icon-twitter"></i></a></li>
-          <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="LinkedIn"><i class="icon-linkedin"></i></a></li>
-          <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Pinterestin"><i class="icon-pinterest"></i></a></li>
-          <li><a href="#" rel="tooltip" data-placement="bottom" data-original-title="Google+"><i class="icon-google-plus last"></i></a></li>
+          <li><a href="http://www.facebook.com/bruce.yue" rel="tooltip" data-placement="bottom" data-original-title="Facebook"><i class="icon-facebook"></i></a></li>
+          <li><a href="https://twitter.com/bruceyue" rel="tooltip" data-placement="bottom" data-original-title="Twitter"><i class="icon-twitter"></i></a></li>
+          <li><a href="http://www.linkedin.com/pub/bruce-yue/42/959/978" rel="tooltip" data-placement="bottom" data-original-title="LinkedIn"><i class="icon-linkedin"></i></a></li>
+          <li><a href="http://weibo.com/u/1043790213" rel="tooltip" data-placement="bottom" data-original-title="Weibo"><i class="icon-pinterest"></i></a></li>
+          <li><a href="https://plus.google.com/109788557844914128707" rel="tooltip" data-placement="bottom" data-original-title="Google+"><i class="icon-google-plus last"></i></a></li>
         </ul>
       </div>
     </div>
