--- a/app/views/about_us/aboutus.html.erb
+++ b/app/views/about_us/aboutus.html.erb
@@ -67,6 +67,7 @@
         <div class="hero-unit">
             <blockquote>
                 <p>Focusing just on force.com is not enough. Ruby on Rails, here I come...</p><small>Bruce Yue</small>
+                <p style="color:red">Notice:</p>
                 <p>Login in through salesforce account, write you content by click "New Tech" with markdown syntax. If you create a post, it will also be posted your Chatter feed. If you want to access <a href="https://www.sharealltech.com/admin">'admin'</a>, use the Salesforce user name as your password to login.</p>
             </blockquote>
         </div>
