--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -3,10 +3,10 @@
   <div class="container">
     <nav id="menu" class="clearfix">
       <ul>
-        <li><a href="../../posts" id="menuHomeLink"><span class="name">Home</span></a></li>
-        <li><a href="../../posts/new" ><span class="name">New Tech</span></a></li>
-        <li><a href="../../about_us/aboutus" ><span class="name">About Us</span></a></li>
-        <li><a href="#"><span class="name">Development</span></a>
+        <li><%= link_to "Home", posts_path %></li>
+        <li><%= link_to "New Tech", new_post_path %></li>
+        <li><%= link_to "About Us", about_us_aboutus_path %></li>
+        <li><a href="#">Development</a>
           <ul>
             <li><a href="#">Salesforce</a>
               <ul>
@@ -18,7 +18,7 @@
             <li><a href="#">Ruby on Rails</a></li>
           </ul>
         </li>
-        <li><a href="#"><span class="name">Projects</span></a></li>
+        <li><a href="#">Projects</a></li>
       </ul>
     </nav>
   </div>
