Add markdown syntax link.

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -33,7 +33,7 @@
       <div class="field">
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: "tabletd" %>
-        Markdown syntax
+        <%= link_to "Markdown Syntax", "http://bywordapp.com/markdown/syntax.html", :target => "_blank" %>
         <%= f.submit "Save", class: "btn-large", style: "float:right;"%>
       </div>
     </td>
