Optimize the site

--- a/app/views/common/_latest_post.html.erb
+++ b/app/views/common/_latest_post.html.erb
@@ -8,7 +8,7 @@
             <% if (post.user && post.user.email) %>
               <%= gravatar_image_tag post.user.email, alt: post.user.name %>
             <% else %>
-              <%= image_tag('avatar.png', height: 55, width: 55)%>
+              <%= image_tag('df.png', height: 55, width: 55)%>
             <% end %>
             <span class="frame-overlay"></span>
           </a>
