--- a/app/views/info/aboutus.html.erb
+++ b/app/views/info/aboutus.html.erb
@@ -9,8 +9,8 @@
             <h3 class="member-name">Bruce Yue</h3>
             <p>Nudge the world to a happier place.</p>
             <p class="member-social">
-                <a href="#"><i class="icon-facebook-sign"></i></a>
-                <a href="#"><i class="icon-twitter-sign"></i></a>
+                <a href="http://www.facebook.com/bruce.yue"><i class="icon-facebook-sign"></i></a>
+                <a href="https://twitter.com/bruceyue"><i class="icon-twitter-sign"></i></a>
                 <a href="#"><i class="icon-envelope"></i></a>
             </p>
         </div>
@@ -26,7 +26,7 @@
             <p class="member-social">
                 <a href="#"><i class="icon-facebook-sign"></i></a>
                 <a href="#"><i class="icon-twitter-sign"></i></a>
-                <a href="#"><i class="icon-envelope"></i></a>
+                <a href="mailto:bruce.yue@outlook.com"><i class="icon-envelope"></i></a>
             </p>
         </div>
     </article>
