--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -5,7 +5,7 @@
       <ul>
         <li><%= link_to "Home", posts_path %></li>
         <li><%= link_to "New Tech", new_post_path %></li>
-        <li><%= link_to "About Us", about_us_aboutus_path %></li>
+        <li><%= link_to "About Us", info_aboutus_path %></li>
         <li><a href="#">Development</a>
           <ul>
             <li><a href="#">Salesforce</a>
