--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,8 @@
 <% if user_signed_in? %>
 	<%= form_for([@post, @post.comments.build]) do |f| %>
 	  <%= markdown(f.text_area :body, rows: 3, class: "commentbox") %>
+	  <%= link_to "Markdown Syntax", "http://bywordapp.com/markdown/syntax.html", :target => "_blank" %>
+      支持表情，见 <%= link_to "Emoji cheat sheet", "http://www.emoji-cheat-sheet.com/", :target => "_blank"%>
 	  <%= f.submit "Comment", class: "btn-large", style: "float:right" %>
 	  <br/>
 	<% end %>
