--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -34,6 +34,7 @@
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: "tabletd" %>
         <%= link_to "Markdown Syntax", "http://bywordapp.com/markdown/syntax.html", :target => "_blank" %>
+        支持表情，见 <%= link_to "Emoji cheat sheet", "http://www.emoji-cheat-sheet.com/", :target => "_blank"%>
         <%= f.submit "Save", class: "btn-large", style: "float:right;"%>
       </div>
     </td>
