--- a/app/views/layouts/info.html.erb
+++ b/app/views/layouts/info.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=100%, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-    <link rel="shortcut icon" href="../assets/favicon.ico" >
+    <%= favicon_link_tag '/favicon.ico' %>
   </head>
   <body>
     <!-- start: Top Menu -->
