--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csrf_meta_tags %>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=100%, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
+    <meta name="keywords" content="ruby, rails, web design and development, salesforce, apex code, visualforce, force.com, database.com" />
     <%= favicon_link_tag '/favicon.ico' %>
   </head>
   <body>
