--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -31,7 +31,7 @@
   <tr>
     <td>
       <div class="field">
-        <%= f.label :body %>
+        <%= f.label :body %> <h3 style="color:red"><%= f.file_field :picture, class: "btn-large" %>[Picture]</h3>
         <%= f.text_area :body, rows: 8, class: "tabletd" %>
         <%= link_to "Markdown Syntax", "http://bywordapp.com/markdown/syntax.html", :target => "_blank" %>
         支持表情，见 <%= link_to "Emoji cheat sheet", "http://www.emoji-cheat-sheet.com/", :target => "_blank"%>
