--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,7 +3,7 @@
 	  <%= markdown(f.text_area :body, rows: 3, class: "commentbox") %>
 	  <%= link_to "Markdown Syntax", "http://bywordapp.com/markdown/syntax.html", :target => "_blank" %>
       支持表情，见 <%= link_to "Emoji cheat sheet", "http://www.emoji-cheat-sheet.com/", :target => "_blank"%>
-	  <%= f.submit "Comment", class: "btn-large", style: "float:right" %>
+	  <%= f.submit "Comment", class: "form-button btn btn-primary", style: "float:right" %>
 	  <br/>
 	<% end %>
 <% end %>
