--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,7 +25,7 @@
     <div class="post-content">
       <p>
         <%= markdown(post.body).truncate(800, :omission => "......").html_safe %><br/>
-        <%= link_to 'Read More', post, class: 'btn btn-primary' %>
+        <%= link_to 'Read More', post, class: 'btn btn-primary', style: "float:right" %>
       </p>
     </div>
   </article>
