--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -6,6 +6,7 @@
         <li><%= link_to "Home", posts_path %></li>
         <li><%= link_to "New Tech", new_post_path %></li>
         <li><%= link_to "About Us", info_aboutus_path %></li>
+        <li><%= link_to "Projects", info_projects_path %></li>
         <li><a href="#">Development</a>
           <ul>
             <li><a href="#">Salesforce</a>
@@ -18,7 +19,6 @@
             <li><a href="#">Ruby on Rails</a></li>
           </ul>
         </li>
-        <li><a href="#">Projects</a></li>
       </ul>
     </nav>
   </div>
