--- a/app/views/common/_login_form.html.erb
+++ b/app/views/common/_login_form.html.erb
@@ -5,6 +5,6 @@
     <% end %>
   </li>
 <% else %>
-  <li><%= current_user.name %></li>
-  <li><a href="/logout">&nbsp; Sign Out</a></li>
+	<li><i class="icon-user"></i><%= current_user.name %></li>
+	<li><a href="/logout">&nbsp;<i class="icon-off"></i>Logout</a></li>
 <% end %>
