--- a/app/views/info/projects.html.erb
+++ b/app/views/info/projects.html.erb
@@ -13,19 +13,19 @@
     <div id="mainslider" class="flexslider">
       <ul class="slides">
         <li>
-          <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362449548/0_jf9mhy.jpg" />
+          <%= cl_image_tag("0_jf9mhy.jpg", width: 720) %>
         </li>
         <li>
-          <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362393200/codenry_rwsu0q.png" />
+          <%= cl_image_tag("codenry_rwsu0q.png") %>
         </li>
         <li>
-          <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362447041/appfog_q7xreh.png" />
+          <%= cl_image_tag("appfog_q7xreh.png") %>
         </li>
         <li>
-          <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362447028/admin_zhzudr.png" />
+          <%= cl_image_tag("admin_zhzudr.png") %>
         </li>
         <li>
-          <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362462073/sf2012_blbcnv.jpg" />
+          <%= cl_image_tag("sf2012_blbcnv.png", width: 720) %>
         </li>
       </ul>
     </div>
@@ -141,7 +141,7 @@ end")
   <article data-id="id-1" class="span3">
     <div class="inner-image">
       <a href="#" data-rel="prettyPhoto">
-        <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362460914/gmail_xk2cda.png" alt="gmail config"/>
+        <%= cl_image_tag("gmail_xk2cda.png") %>
         <span class="frame-overlay"></span>
       </a>
     </div>
@@ -150,7 +150,7 @@ end")
   <article  data-id="id-2" class="span3">
     <div class="inner-image">
       <a href="#" data-rel="prettyPhoto">
-        <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362462049/cloud_ygfpvv.png" alt="cloudinary"/>
+        <%= cl_image_tag("cloud_ygfpvv.png") %>
         <span class="frame-overlay"></span>
       </a>
     </div>
@@ -159,7 +159,7 @@ end")
   <article data-id="id-3" class="span3">
     <div class="inner-image">
       <a href="#" data-rel="prettyPhoto">
-        <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362467518/bootstrap_eqsacb.png" alt="bootstrap"/>
+        <%= cl_image_tag("bootstrap_eqsacb.png") %>
         <span class="frame-overlay"></span>
       </a>
     </div>
@@ -168,7 +168,7 @@ end")
   <article data-id="id-4" class="span3">
     <div class="inner-image">
       <a href="#" data-rel="prettyPhoto">
-        <img src="http://res.cloudinary.com/sharealltech/image/upload/v1362467809/metroui_vm0ukk.png" alt="metro ui"/>
+        <%= cl_image_tag("metroui_vm0ukk.png") %>
         <span class="frame-overlay"></span>
       </a>
     </div>
