Update about us image to CDN

--- a/app/views/info/aboutus.html.erb
+++ b/app/views/info/aboutus.html.erb
@@ -2,7 +2,7 @@
 <div class="row-fluid portfolio portfolio-extended member-info">
     <article class="span3">
         <div class="inner-image">
-            <%= image_tag("bruce.jpg", width: 255) %>
+            <%= cl_image_tag("bruce_jhbus9.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
@@ -17,7 +17,7 @@
     </article>
     <article class="span3">
         <div class="inner-image">
-            <%= image_tag("team2.jpg", width: 255) %>
+            <%= cl_image_tag("team2_kqeqkz.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
@@ -32,7 +32,7 @@
     </article>
     <article class="span3">
         <div class="inner-image">
-            <%= image_tag("team3.jpg", width: 255) %>
+            <%= cl_image_tag("team3_k8isg2.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
@@ -47,7 +47,7 @@
     </article>
     <article class="span3">
         <div class="inner-image">
-            <%= image_tag("team4.jpg", width: 255) %>
+            <%= cl_image_tag("team4_cs1mkf.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
