--- a/app/views/info/aboutus.html.erb
+++ b/app/views/info/aboutus.html.erb
@@ -2,7 +2,7 @@
 <div class="row-fluid portfolio portfolio-extended member-info">
     <article class="span3">
         <div class="inner-image">
-            <%= cl_image_tag("bruce_jhbus9.jpg", width: 255) %>
+            <%= image_tag("bruce.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
@@ -17,7 +17,7 @@
     </article>
     <article class="span3">
         <div class="inner-image">
-            <%= cl_image_tag("team2_kqeqkz.jpg", width: 255) %>
+            <%= image_tag("team2.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
@@ -32,12 +32,12 @@
     </article>
     <article class="span3">
         <div class="inner-image">
-            <%= cl_image_tag("team3_k8isg2.jpg", width: 255) %>
+            <%= image_tag("team3.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
-            <h3 class="member-name">Jhon Doe</h3>
-            <p>Nudge the world to a happier place.</p>
+            <h3 class="member-name">Teresa Wo</h3>
+            <p>To build a happy family.</p>
             <p class="member-social">
                 <a href="#"><i class="icon-facebook-sign"></i></a>
                 <a href="#"><i class="icon-twitter-sign"></i></a>
@@ -47,7 +47,7 @@
     </article>
     <article class="span3">
         <div class="inner-image">
-            <%= cl_image_tag("team4_cs1mkf.jpg", width: 255) %>
+            <%= image_tag("team4.jpg", width: 255) %>
             <span class="frame-overlay"></span>
         </div>
         <div class="inner-text">
@@ -68,7 +68,7 @@
             <blockquote>
                 <p>Focusing just on force.com is not enough. Ruby on Rails, here I come...</p><small>Bruce Yue</small>
                 <p style="color:red">Notice:</p>
-                <p>Login in through salesforce account, write you content by click "New Tech" with markdown syntax. If you create a post, it will also be posted your Chatter feed. If you want to access <a href="https://www.sharealltech.com/admin">'admin'</a>, use the Salesforce user name as your password to login.</p>
+                <p>Login in through salesforce account, write you content by clicking "New Tech" with markdown syntax. If you create a post, it will also be posted to your Salesforce Chatter feed. If you want to access <a href="https://www.sharealltech.com/admin">'admin'</a>, use the Salesforce user name as your password to login.</p>
             </blockquote>
         </div>
     </div>
