--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,11 @@
             <% if @post.comments.count != 0 %>
             <li><span class="post-meta-label">Comments:</span> <%= link_to @post.comments.count,  @post %></li>
             <% end %>
-            <li><i class="icon-thumbs-up"></i></li>
+            <li>
+              <span id="like">
+                <%= render 'likes/like_button', :post => @post %>
+              </span>
+            </li>
           </ul>
       </div>
   </div>
