--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,2 @@
-$(".comments").html("<%=j render(@post.comments) %>");
+$(".comments").html("<%=j render(@post.comments.order('created_at')) %>");
+$('.commentbox').val('');
