--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,10 @@
             <%= render "common/recent_years" %>
             <!-- end: Blog Archives / Accordion -->
 
+            <!-- start: Ads -->
+            <%= render "common/ads" %>
+            <!-- end: Blog Ads  -->
+
         </aside>
         <!-- end: Sidebar -->
 
