--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -7,6 +7,7 @@
         <li><%= link_to "New Tech", new_post_path %></li>
         <li><%= link_to "About Us", info_aboutus_path %></li>
         <li><%= link_to "Projects", info_projects_path %></li>
+        <li><%= link_to "Spider", info_spider_path %></li>
         <li><a href="#">Development</a>
           <ul>
             <li><a href="#">Salesforce</a>
