--- a/app/views/layouts/info.html.erb
+++ b/app/views/layouts/info.html.erb
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>ShareAllTech</title>
-    <%= stylesheet_link_tag    :application %>
-    <%= javascript_include_tag :application %>
-    <%= csrf_meta_tags %>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=100%, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-    <meta name="keywords" content="ruby, rails, web design and development, salesforce, apex code, visualforce, force.com, database.com" />
-    <%= favicon_link_tag '/favicon.ico' %>
-  </head>
+  <%= render "common/header" %>
   <body>
     <!-- start: Top Menu -->
     <%= render "common/social" %>
@@ -45,16 +36,7 @@
     <!-- end: Container -->
 
     <!-- GA -->
-    <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-38763296-1']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
+    <%= render "common/ga" %>
     <!-- end: GA -->
 
   </body>
